[package]
name = "cardano-data-provider"
version = "0.1.1"
edition = "2021"
description = "Drasil - Cardano DataProvider Library"
repository = "https://github.com/drasil_blockchain/cardano_data_provider.git"
homepage = "https://www.drasil.io"
documentation = "https://docs.drasil.io"
license = "LICENSE.md"
readme = "README.md"
authors = ["Torben Poguntke <torben@drasil.io>"]


[dependencies]
cardano-serialization-lib = "11.4.0"
csl-common = { git = "https://github.com/drasil-blockchain/csl-common.git", branch = "main" }
#cryptoxide = { version = "0.4.2", features = ["blake2"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
itertools = "0.10.3"
thiserror = "1.0.32"
strum = { version = "0.24", features = ["derive", "phf"] }
strum_macros = "0.24"
pretty_env_logger = "0.4.0"
log = "0.4"
lazy_static = "1.4.0"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
http = "0.2.6"
toml = "0.5.9"
base64 = "0.21.4"
diesel = { version = "2.0.0", features = [
    "postgres",
    "numeric",
    "chrono",
    "64-column-tables",
    "r2d2",
    "serde_json",
] }
diesel-derive-enum = { version = "2.0.0", features = ["postgres"] }
bigdecimal = { version = "0.4.0", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
config = { version = "0.13.0", default-features = false, features = [
    "toml",
    "json",
] }

blockfrost = "=0.2.1"
async-trait = "0.1.58"


tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.6"
futures = "0.3.21"
warp = { version = "0.3", features = ["tls"] }
rweb = { version = "0.15", features = ["openapi", "websocket", "uuid", "tls"] }
jsonwebtoken = { version = "8.1.0", features = ["use_pem"] }
ratelimit_meter = "5.0.0"
uuid = { version = "1.1.2", features = ["v4"] }
nonzero_ext = "0.3.0"

# grpc
tonic = { version = "0.9.2", features = [
    "transport",
    "channel",
    "codegen",
    "tls",
    "prost",
] }
prost = "0.11.9"
dotenv = "0.15.0"
array_tool = "1.0.3"
######
[build-dependencies]
#  grpc
tonic-build = "0.9"
prost-build = "0.11"
######

[lib]
name = "cdp"
path = "src/lib.rs"

[[bin]]
name = "cdp-server"
path = "src/bin/server.rs"
